ver 0.23.2 (not yet released)

ver 0.23.1 (2021/10/19)
* protocol
  - use decimal notation instead of scientific notation
  - "load" supports relative positions
* output
  - emit "mixer" idle event when replay gain changes volume
  - pipewire: emit "mixer" idle events on external volume change
  - pipewire: attempt to change the graph sample rate
  - snapcast: fix time stamp bug which caused "Failed to get chunk"
* fix libfmt linker problems
* fix broken password authentication

ver 0.23 (2021/10/14)
* protocol
  - new command "getvol"
  - show the audio format in "playlistinfo"
  - support "listfiles" with arbitrary storage plugins
  - support relative positions in "addid"
  - fix relative positions in "move" and "moveid"
  - add "position" parameter to "findadd" and "searchadd"
  - add position parameter to "load"
* database
  - proxy: require MPD 0.20 or later
  - proxy: require libmpdclient 2.11 or later
  - proxy: split search into chunks to avoid exceeding the output buffer
  - simple: add option to hide CUE target songs
  - upnp: support libnpupnp instead of libupnp
* archive
  - zzip, iso9660: ignore file names which are invalid UTF-8
* decoder
  - openmpt: new plugin
  - wavpack: fix WVC file support
* player
  - do not cross-fade songs shorter than 20 seconds
* output
  - oss: support DSD over PCM
  - pipewire: new plugin
  - snapcast: new plugin
* tags
  - new tags "ComposerSort", "Ensemble", "Movement", "MovementNumber", and "Location"
* split permission "player" from "control"
* add option "host_permissions"
* new build-time dependency: libfmt

ver 0.22.11 (2021/08/24)
* protocol
  - fix "albumart" crash
* filter
  - ffmpeg: pass "channel_layout" instead of "channels" to buffersrc
  - ffmpeg: fix "av_buffersink_get_frame() failed: Resource temporarily unavailable"
  - ffmpeg: support double-precision samples (by converting to single precision)
* Android
  - build with NDK r23