@@ -1,4 +1,6 @@
 ver 0.23.2 (not yet released)
+* neighbor
+  - mention failed plugin name in error message
 
 ver 0.23.1 (2021/10/19)
 * protocol
